# nixhs

./: .gitignore  Main.hs  flake.nix  nixhs.cabal  test.sh
